# shadowrust

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  icon.rs  main.rs
src/audio/: device.rs  mod.rs  passthrough.rs
src/capture/: config.rs  device.rs  mod.rs  thread.rs
src/config/: mod.rs  model.rs  persistence.rs
src/decode/: mod.rs
src/power/: linux.rs  macos.rs  mod.rs  windows.rs
src/record/: audio_mux.rs  finalize.rs  mod.rs  setup.rs  thread.rs  video.rs
src/render/: frame.rs  mod.rs  render_pass.rs  setup.rs  shader.wgsl
src/ui/: helpers.rs  mod.rs  overlay.rs  settings.rs  state.rs  update_banner.rs
src/updater/: checker.rs  mod.rs  status.rs  version.rs
