[package]
name = "shadowrust"
version = "0.6.4"
edition = "2024"
description = "High-performance video capture viewer"
license = "MIT"

[[bin]]
name = "shadowrust"
path = "src/main.rs"

[dependencies]
# Window + event loop
winit = "0.30"

# GPU rendering (Vulkan / Metal / DX12 / WebGPU)
wgpu = "22"

# UI overlay
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"

# UVC camera capture (v4l2 / AVFoundation / MediaFoundation)
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"] }

# Audio capture + playback (UAC device → system output)
cpal = "0.15"
ringbuf = "0.3"

# Video recording via FFmpeg
ffmpeg-next = "7"

# Utilities
bytemuck = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ureq = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[build-dependencies]
# Windows: embed the application icon (.ico) into the EXE
winres = "0.1"
